<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <group android:menuCategory="container">
        <item android:id="@+id/favorite_menu"
            android:title="@string/favorite"
            android:icon = "@drawable/ic_favorite"
            app:showAsAction="always" />

        <item android:id="@+id/setting_menu"
            android:title="@string/settings"
            android:icon = "@drawable/ic_setting"
            app:showAsAction="always"/>
    </group>
</menu>